# pandora

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Pandora.sln  README.md  no-sudo.travis.yml  notes.txt  setup_hooks.py  travis.py  travis.yaml  travis_build_script.sh  vcpkg-configuration.json  vcpkg.json
atlas/: CMakeLists.txt
atlas/src/: CMakeLists.txt  main.cpp
atlas/src/ui/: fps_camera_controls.cpp  fps_camera_controls.h  framebuffer_gl.cpp  gl_error.cpp  gl_error.h  window.cpp  window.h
libPandora/: CMakeLists.txt
libPandora/include/pandora/: main.h
libPandora/include/pandora/core/: sensor.h
libPandora/include/pandora/math/: quaternion.h  transform.h  vec3.h
libPandora/src/: CMakeLists.txt  main.cpp
libPandora/src/core/: sensor.cpp
libPandora/src/math/: quaternion.cpp  vec3.cpp
libPandora/tests/: CMakeLists.txt  my_first_test.cpp  test_transform.cpp  test_vec3.cpp
pandora/: CMakeLists.txt
pandora/include/pandora/: main.h
pandora/include/pandora/core/: perspective_camera.h  sensor.h
pandora/include/pandora/geometry/: sphere.h
pandora/include/pandora/math/: bounds3.h  mat3x4.h  quaternion.h  vec2.h  vec3.h
pandora/include/pandora/traversal/: intersect_sphere.h  ray.h
pandora/include/pandora/utility/: generator_wrapper.h
pandora/src/: CMakeLists.txt  main.cpp
pandora/src/core/: perspective_camera.cpp  sensor.cpp
pandora/src/math/: mat3x4.cpp  vec2.cpp  vec3.cpp
pandora/src/traversal/: intersect_sphere.cpp
pandora/src/ui/: framebuffer_gl.cpp  framebuffer_gl.h  gl_error.cpp  texture.h  window.cpp  window.h
pandora/tests/: CMakeLists.txt
projects/atlas/: Atlas.vcxproj  Atlas.vcxproj.filters  CMakeLists.txt  DebugPropertySheet.props  ReleasePropertySheet.props
projects/atlas/shaders/: atlas_output.fs  atlas_output.vs
projects/atlas/src/: CMakeLists.txt  main.cpp
projects/atlas/src/ui/: fps_camera_controls.cpp  fps_camera_controls.h  framebuffer_gl.cpp  framebuffer_gl.h  gl_error.cpp  window.cpp  window.h
projects/diskbench/: CMakeLists.txt  main.cpp
projects/ispctest/: CMakeLists.txt
projects/ispctest/src/: CMakeLists.txt  main.cpp
projects/ispctest/src/folder/: ispc_transform.ispc
projects/metrics/: CMakeLists.txt
projects/metrics/example/: CMakeLists.txt
projects/metrics/example/src/: CMakeLists.txt  (+1 more)
projects/metrics/include/: CMakeLists.txt
projects/metrics/src/: CMakeLists.txt  counter.cpp  exporter.cpp  gauge.cpp  group.cpp  histogram.cpp  json_exporter.cpp  metric.cpp  offline_exporter.cpp  stats.cpp  stopwatch.cpp
projects/metrics/tools/: process_stats.py  stats.json
projects/pandora/: CMakeLists.txt  Pandora.vcxproj  Pandora.vcxproj.filters
projects/pandora/flatbuffers/: contiguous_allocator.fbs  contiguous_allocator_generated.h  data_types.fbs  ooc_batching.fbs  ooc_batching2.fbs  scene.fbs  triangle_mesh.fbs  triangle_mesh_generated.h  wive_bvh8.fbs  wive_bvh8_generated.h
projects/pandora/include/: CMakeLists.txt
projects/pandora/src/: CMakeLists.txt
projects/pandora/tests/: CMakeLists.txt  test_allocator.cpp  test_contiguous_allocator_ts.cpp  test_free_list_backed_memory_arena.cpp  test_growing_free_list_ts.cpp  test_memory_arena.cpp  test_memory_arena_ts.cpp  test_simd.cpp  test_simd4.cpp  test_simd8.cpp  test_transform.cpp  test_triangle.cpp  test_vec3.cpp
projects/pbf_importer/: CMakeLists.txt
projects/pbf_importer/apps/: CMakeLists.txt  parser_bench.cpp
projects/pbf_importer/src/: CMakeLists.txt  lexer.cpp  parser.cpp  pbf_importer.cpp  pbf_to_render_config.cpp  pbf_to_render_config.h  texture_cache.h  visit.h
projects/pbrt_importer/: CMakeLists.txt  benchmark.cpp  pandora_py.cpp  parse_pbrt.pyperf  parse_pbrt1.pyperf  string_to_number.cpp
projects/pbrt_importer/python/: batched_obj_exporter.py  config_parser.py  export_pandora.py  out.json  pandora_mesh_exporter.py  parse_pbrt.py  pbrt_to_pandora.py  pbrt_to_pandora.pyperf  pbrt_to_pandora.pyproj  pbrt_to_pandora.sln  scene_parser.py  string_to_number_benchmark.py  test.py  test_mem_usage.py  unique_collection.py  verify_scene.py
projects/pbrt_importer/src/: crack_atof.cpp  crack_atof_avx2.cpp  crack_atof_avx512.cpp  crack_atof_sse.cpp  hello_world.cpp  mesh_exporter.cpp  mesh_exporter.h  mesh_wrapper.cpp  mesh_wrapper.h  pandora_py.cpp  string_to_number.cpp  string_to_number.h
projects/pbrt_importer/src2/: hello_world.cpp  hello_world.h
projects/pbrt_importer2/: CMakeLists.txt
projects/pbrt_importer2/apps/: CMakeLists.txt  lexer_bench.cpp  main.cpp  parser_bench.cpp  ring_buffer.h  string_to_float_bench.cpp  timer.h
projects/pbrt_importer2/src/: CMakeLists.txt  lexer.cpp  lexer.h  main.cpp  pbrt_importer.cpp  simd_lexer.cpp  simd_lexer.h  wald_lexer.cpp  wald_lexer.h
projects/pbrt_importer2/tests/: CMakeLists.txt  test_lexer.cpp
projects/prometheus_test/: CMakeLists.txt
projects/prometheus_test/src/: CMakeLists.txt  main.cpp
projects/simd/: CMakeLists.txt
projects/simd/include/: CMakeLists.txt
projects/simd/tests/: CMakeLists.txt
projects/stream/: CMakeLists.txt
projects/stream/include/: CMakeLists.txt
projects/stream/src/: CMakeLists.txt  xxx.cpp
projects/stream/tests/: CMakeLists.txt
projects/stream_framework/: CMakeLists.txt
projects/stream_framework/example/: main.cpp  main_old.cpp
projects/stream_framework/src/: data_stream.cpp  enumerate.h  evict_cache.cpp  evictable.cpp  file_serializer.cpp  source_task.cpp  stats.cpp  task_graph.cpp  task_pool.cpp
projects/stream_framework/tests/: CMakeLists.txt  cache.cpp  data_stream.cpp  evict_cache.cpp  file_serializer.cpp  lru_cache.cpp  lru_cache_ts.cpp  main.cpp  moodycamel_queue.cpp  queue.cpp  static_data_cache.cpp  task_graph.cpp  task_pool.cpp  tbb_queue.cpp
projects/stream_framework_hpx/: CMakeLists.txt
projects/stream_framework_hpx/example/: CMakeLists.txt
projects/stream_framework_hpx/src/: task_executor.cpp
projects/stream_framework_hpx/tests/: data_stream.cpp  generic_resource_cache.cpp  task_pool.cpp
projects/voxel/: CMakeLists.txt
projects/voxel/src/: CMakeLists.txt  main.cpp
(+523 files in other folders)
